--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Documents and Settings\\Young Lee\\.netbeans\\6.9\\build.properties
+user.properties.file=C:\\Users\\dburrowes\\.netbeans\\6.9\\build.properties
