--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\dburrowes\\.netbeans\\6.9\\build.properties
+user.properties.file=/Users/bodawei/.netbeans/7.0beta/build.properties
