Broadened the scope of this beyond just jpg file management.  Added utf8 handling. Started to lay the ground work for getting jpeg stuff to actually work by adding in new hex2bin and bin2hex classes so I can generate test code, and got first unit test of jpeg stuff to work.  But, now that I'm checking this in, I realize that this is touching the file system, which it shouldn't be...

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,6 @@
 compile.on.save=true
-user.properties.file=/Users/bodawei/.netbeans/7.0beta/build.properties
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=/Users/bodawei/.netbeans/7.0beta2/build.properties
