--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,7 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.JUnit-4.8.2.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
