--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/bodawei/.netbeans/7.0beta2/build.properties
+user.properties.file=C:\\Users\\dburrowes\\.netbeans\\6.9\\build.properties
