Got unit tests to work after last checkin.  I have realized I have a modification on another computer which I didn't actually check in.  Heh!

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,8 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.JUnit-4.8.2.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
